<resources>
    <string name="app_name">Pictlonis</string>
    <string name="nb_clt_hint">Nombre de joueurs</string>
    <string name="port_hint">Port</string>
    <string name="ip_hint">Adresse IP</string>
    <string name="validate_btn_title">Valider</string>
    <string name="clt_btn_title">Client</string>
    <string name="host_btn_title">Heberger</string>
    <string name="name_hint">Nom d\'utilisateur</string>
    <string name="pwd_hint">Mot de passe</string>
    <string name="sub_btn_title">S\'inscrire</string>
    <string name="login_btn_title">Se connecter</string>
    <string name="mail_hint">E-mail</string>
    <string name="fname_hint">Prenom</string>
    <string name="lname_hint">Nom</string>
    <string name="usersettings_btn_title">Parametres</string>
</resources>
