<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="44dp"
            android:hint="@string/name_hint" />

        <EditText
            android:id="@+id/mail_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/lname_edit"
            android:layout_marginTop="45dp"
            android:hint="@string/mail_hint" />

        <EditText
            android:id="@+id/fname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name_edit"
            android:layout_marginTop="36dp"
            android:hint="@string/fname_hint" />

        <EditText
            android:id="@+id/lname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/fname_edit"
            android:layout_marginTop="49dp"
            android:hint="@string/lname_hint" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="44dp"
            android:text="@string/validate_btn_title" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>