<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:id="@+id/main_menu"
    >

    <Button
        android:id="@+id/host_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/clt_btn"
        android:layout_marginTop="34dp"
        android:text="@string/host_btn_title"/>

    <Button
        android:id="@+id/clt_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:text="@string/clt_btn_title"/>

    <Button
        android:id="@+id/usersettings_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:text="@string/usersettings_btn_title" />

</RelativeLayout>